# pruning_via_decorrelation

./: .gitignore  README.md  main.py  pyproject.toml
conf/: config.yaml
nir/: data.py  model.py  myutils.py  prune.py  train.py
